2008-09-15  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (sldb-loop): Send a :sldb-return event to ourselfes
	when returning to inform the debug session at the lower level.
	(wait-for-event): Drop the report-interrupt argument.  No longer
	needed.
	(event-match-p): Add an OR pattern operator.  Used to wait for
	different events simultaneously.

	(read-packet): Use peek-char to detect EOF. read-sequence wouldn't
	work.

	* slime.el (slime-test-interrupt-in-debugger): Call sldb-quit and
	sldb-continue in the right buffer.

	* swank-backend.lisp (wait-for-input):
	* swank-cmucl.lisp (wait-for-input):
	* swank-clisp.lisp (wait-for-input): Use the idiom
	"(when (check-slime-interrupts) (return :interrupt))".

2008-09-15  Helmut Eller  <heller@common-lisp.net>

	Interrupt related hacking.

	* swank-backend.lisp (*pending-slime-interrupts*): Should be
	thread-local.  Leave global value unbound.

	* swank.lisp (with-interrupts-enabled%): New helper macro.
	(with-slime-interrupts, without-slime-interrupts): Use it.
	(call-with-connection): Bind *pending-slime-interrupts* here.
	(wait-for-event): Add a report-interrupt argument.  Currently used
	by the debugger to detect when a nested debugger session, which
	was triggered by an interrupt in wait-for-event, returns.  Doesn't
	work well, though.

	* slime.el (slime-test-interrupt-in-debugger): New test.

2008-09-14  Helmut Eller  <heller@common-lisp.net>

	Introduce a WAIT-FOR-INPUT backend function.
	CMUCL's blocking input functions READ-CHAR etc.
	are hard to use with interrupts.  In the backend
	we have a more realistic chance to get interrupts working.

	* swank-backend.lisp (wait-for-input): New function.

	* swank-cmucl.lisp, swank-clisp.lisp (wait-for-input): Implement
	it.

	* swank.lisp (wait-for-event/event-loop): Use WAIT-FOR-INPUT and
	rescan the event-queue if WAIT-FOR-INPUT was interrupted.
	(reader-event): Deleted. Merged into wait-for-event/event-loop
	resp.  dispatch-loop.